@@ -5,6 +5,7 @@ Revision history for CGI-Info
 	Added come comments and small optimisations
 	new(): Use Scalar::Util to verify it's an object
 	Refactor AUTOLOAD
+	Avoid re-importing modules
 
 0.84	Fri Oct 18 08:21:05 EDT 2024
 	Intercept SQL Injection
